test/1.4/errors/T_ELLEVASGROUPS.dml
/*
  © 2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

/// COMPILE-ONLY

loggroup lg;

session bool b;
session int i;

method init() {
    // no warning
    log info, i, lg: "log";

    /// ERROR ELLEVASGROUPS
    log info, i, 1: "log";
    /// ERROR ELLEVASGROUPS
    log info, i, 5: "log";
    /// ERROR ELLEVASGROUPS
    log info, i, b ? cast(1, uint32) : i: "log";

    // no warning
    log info, i, 6: "log";
    log info, i, b ? cast(1, uint32) : 0: "log";
    log info, i, b ? cast(1, uint32) : lg: "log";
    log info, i, b ? cast(i, uint32) : i: "log";
    log info, i, 1 + i: "log";
    local uint64 ll_ = 1;
    log info, i, ll_: "log";
}
